--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,13 +42,25 @@
 						<h1>HUMAN KNOWLEDGE BELONGS TO THE WORLD</h1>
 						
 						<hr class="intro-divider">
-						<ul class="list-inline intro-social-buttons">
-							{% for social in site.social %}
-							<li>
-								<a href="{{ social.url }}" class="btn btn-default btn-lg"><i class="fa fa-{{ social.title }} fa-fw"></i> <span class="network-name">{{ social.title }}</span></a>
-							</li>
-							{% endfor %}
-						</ul>
+						<div class="buttons-container">
+        <a href="https://open.spotify.com/show/7ex9w5VFDmMENzUApHjFhf" target="_blank" rel="noopener" class="button spotify">
+          <i class="fa-brands fa-spotify"></i><span>Podcast</span>
+        </a>
+
+        <div class="vertical-line"></div>
+
+        <a href="https://www.youtube.com/@Imchecotech" target="_blank" rel="noopener" class="button youtube">
+          <i class="fa-brands fa-youtube"></i><span>CHECOTECH</span>
+        </a>
+
+        <div class="vertical-line"></div>
+
+        <a href="http://www.thebluepixel.shop/" target="_blank" rel="noopener" class="button bluepixel">
+          <i class="fa fa-shopping-bag"></i><span>Shop</span>
+        </a>
+      </div>
+    </div>
+  </div>
 					</div>
 				</div>
 			</div>
